2007-02-22  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-combo-xml.c, foomatic-perl-data.c, lib/Foomatic/DB.pm: 
	  Let new driver data fields go into the generated PPD files and
	  into the oberview output. To get this information into the PPD
	  lists of CUPS 1.2.x when using on-the-fly PPD generation added
	  a new "DRV:" field to the device ID which contains all the
	  driver functionality information.

2007-02-21  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-combo-xml.c, foomatic-perl-data.c: Added support for
	  new data fields in the driver XML files. These data fields
	  should describe the properties of the drivers in a better way to
	  guide the user to find the best driver for his personal needs
	  and also make printer setup tools clearly informing the user
	  before downloading and installing a driver which is not part of
	  the distribution.

2007-02-07  Till Kamppeter <till.kamppeter@gmail.com>

	* Foomatic-Devel-Ideas.txt, README, debian/README.Debian,
	  debian/control, foomatic-filters-ppds-README, lib/Foomatic/DB.pm:
	  Replaced "FSG OpenPrinting" by "OpenPrinting".

2007-02-06  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-perl-data.c: Added support for more driver types:
	  CUPS Raster, IJS, and OpenPrinting Vector.

2007-01-06  Till Kamppeter <till.kamppeter@gmail.com>

	* README, USAGE, README.build-foomatic-filters-ppds,
	  foomatic-addpjloptions.8.in, foomatic-combo-xml.1.in,
	  foomatic-compiledb.1.in, Foomatic-Devel-Ideas.txt,
	  foomatic-filters-ppds-README, foomatic-kitload.8.in,
	  foomatic-ppdfile.1.in, lib/Foomatic/DB.pm, debian/control,
	  debian/copyright, debian/foomatic-bin.README.Debian,
	  debian/README.Debian: Updated texts and links to have
	  "http://www.openprinting.org/" and "FSG OpenPrinting".

2007-01-04  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-ppdfile.1.in: Corrected mark-up in the man page for
	  foomatic-ppdfile (Thanks to Eric Raymond for his man page
	  verification bot).
